# SoundProcessing

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
AudioIOTest/: Application.h  BaseSoundProcessingApplication.h  CMakeLists.txt  main.cpp
AudioIOTest/config/: CMakeLists.txt  LFrameworkConfig.h
CMSIS-LC-NLMS/: Application.h  CMakeLists.txt  main.cpp
CMSIS-LC-NLMS/Filters/: LC_NLMS_Implement.h
CMSIS-LC-NLMS/config/: CMakeLists.txt
Src/: Application.h  CMakeLists.txt  main.cpp
Src/Filters/: CMakeLists.txt  FrostFilter.h  IAdaptiveFilter.h
